[package]
name = "geadb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"
