[package]
name = "geadb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mount"
path = "src/mounts.rs"
[[bin]]
name = "toy"
path = "src/toys.rs"

[dependencies]
byteorder = "1.4.3"
csv = "1.2.0"
html-escape = "0.2.13"
image = "0.24.5"
image-blp = "1.0.1"
kmeans_colors = { version = "0.6.0", features = ["palette_color", "image"] }
palette = "0.7.2"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"
