[package]
name = "geadb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mount"
path = "src/mounts.rs"
[[bin]]
name = "toy"
path = "src/toys.rs"

[dependencies]
byteorder = "1.5"
csv = "1.3"
html-escape = "0.2.13"
image = "0.24"
image-blp = "1.2"
kmeans_colors = { version = "0.6.0", features = ["palette_color", "image"] }
palette = "0.7"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
